// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`actions getTokenBalance 1`] = `
Array [
  Object {
    "type": "tokenBalance",
    "value": Object {
      "allowance": 222,
      "balance": 111,
    },
  },
]
`;

exports[`actions getTokenBalance 2`] = `
Array [
  Array [
    "code1",
    "0xAccount",
  ],
]
`;

exports[`actions getTokenBalance 3`] = `
Array [
  Array [
    "code1",
    "0xAccount",
  ],
]
`;

exports[`actions getTokenBalance dummy addr 1`] = `Array []`;

exports[`actions getUserOrders 1`] = `
Array [
  Object {
    "type": "userOrderList",
    "value": Array [
      Object {
        "test": "test",
      },
    ],
  },
]
`;

exports[`actions getUserOrders 2`] = `
Array [
  Array [
    "0xAccount",
    -1357432110,
    1234567890,
    "pair",
  ],
]
`;

exports[`actions getUserOrders dummy addr 1`] = `Array []`;

exports[`actions orderBookSnapshotUpdate 1`] = `
Object {
  "type": "orderBookSnapshot",
  "value": Object {
    "test": "test",
  },
}
`;

exports[`actions orderBookSubscriptionUpdate 1`] = `
Object {
  "type": "orderBookSubscription",
  "value": "pair",
}
`;

exports[`actions orderBookUpdate 1`] = `
Object {
  "type": "orderBookUpdate",
  "value": Object {
    "test": "test",
  },
}
`;

exports[`actions subscribe 1`] = `
Array [
  Object {
    "type": "orderBookSubscription",
    "value": "",
  },
  Object {
    "type": "userSubscription",
    "value": 0,
  },
  Object {
    "type": "orderBookSubscription",
    "value": "pair",
  },
  Object {
    "type": "userSubscription",
    "value": 123,
  },
  Object {
    "type": "userOrderList",
    "value": Array [
      Object {
        "test": "test",
      },
    ],
  },
  Object {
    "type": "tokenBalance",
    "value": Object {
      "allowance": 222,
      "balance": 111,
    },
  },
]
`;

exports[`actions subscribe 2`] = `
Array [
  Array [
    "pair",
  ],
]
`;

exports[`actions subscribe 3`] = `
Array [
  Array [
    "0xAccount",
    -1357432110,
    1234567890,
    "pair",
  ],
]
`;

exports[`actions tokenBalanceUpdate 1`] = `
Object {
  "type": "tokenBalance",
  "value": Object {
    "allowance": 456,
    "balance": 123,
  },
}
`;

exports[`actions userOrder 1`] = `
Object {
  "type": "userOrder",
  "value": Object {
    "test": "test",
  },
}
`;

exports[`actions userOrderListUpdate 1`] = `
Object {
  "type": "userOrderList",
  "value": Array [
    Object {
      "test": "test",
    },
  ],
}
`;

exports[`actions userSubscriptionUpdate 1`] = `
Object {
  "type": "userSubscription",
  "value": 123,
}
`;
